k8n/overlays/staging/artifacts/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
spec:
  template:
    spec:
      containers:
      - name: nexus
        env: # Used so variables are interpolated correctly into the variable
        - name: NEXUS_DATASTORE_NEXUS_JDBCURL
          value: "jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${NEXUS_DB}"
