k8n/overlays/staging/artifacts/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - http:
      paths:
      - path: /staging/nexus
        pathType: Prefix
        backend:
          service:
            name: nexus-service
            port:
              name: http
